==> Hui-tkx/MSMP0G3519_EMPTY/BSP/oled/oled_spi.c <==
#include "oled_spi.h"
#include "oledfont.h"
#include "../delay/delay.h"
#include <string.h>

void OLED_WR_Byte(u8 dat, u8 cmd)
{
    if (cmd)
    {
        OLED_DC_Set();
    }
    else
    {
        OLED_DC_Clr();
    }
    OLED_CS_Clr();
    OLED_SPI_waitReady();
    DL_SPI_transmitData8(SPI_OLED_INST, dat);
    while (DL_SPI_isBusy(SPI_OLED_INST))
    {
    }
    OLED_CS_Set();
    OLED_DC_Set();
}

void OLED_ShowChar(u8 x, u8 y, char chr)
{
    unsigned char c = 0, i = 0;
    c = chr - ' '; // 得到偏移后的值
    if (x > Max_Column - 1)
    {
        x = 0;
        y = y + 2;
    }
    if (SIZE == 16)
    {
        OLED_Set_Pos(x, y);
        for (i = 0; i < 8; i++)
            OLED_WR_Byte(F8X16[c * 16 + i], OLED_DATA);
        OLED_Set_Pos(x, y + 1);
        for (i = 0; i < 8; i++)
            OLED_WR_Byte(F8X16[c * 16 + i + 8], OLED_DATA);
    }
    else
    {
        OLED_Set_Pos(x, y + 1);
        for (i = 0; i < 6; i++)
            OLED_WR_Byte(F6x8[c][i], OLED_DATA);
    }
}

void OLED_Init(void)
{
    OLED_RST_Set();
    delay_cycles(CPU_Frq * 100);
    OLED_RST_Clr();
    delay_cycles(CPU_Frq * 100);
    OLED_RST_Set();

    OLED_WR_Byte(0xAE, OLED_CMD); // 关闭OLED面板
    OLED_WR_Byte(0x02, OLED_CMD); // 设置低列地址
    OLED_WR_Byte(0x10, OLED_CMD); // 设置高列地址
    OLED_WR_Byte(0x40, OLED_CMD); // 设置起始行地址  Set Mapping RAM Display Start Line (0x00~0x3F)
    OLED_WR_Byte(0x81, OLED_CMD); // 设置对比度控制寄存器
    OLED_WR_Byte(0xCF, OLED_CMD); // 设置SEG输出电流亮度
    OLED_WR_Byte(0xA1, OLED_CMD); // 设置SEG/列映射 0xa0左右反转 0xa1正常
    OLED_WR_Byte(0xC8, OLED_CMD); // 设置COM/行扫描方向 0xc0上下反转 0xc8正常
    OLED_WR_Byte(0xA6, OLED_CMD); // 设置正常显示
    OLED_WR_Byte(0xA8, OLED_CMD); // 设置多路复用率(1 到 64)
    OLED_WR_Byte(0x3f, OLED_CMD); // 1/64占空比
    OLED_WR_Byte(0xD3, OLED_CMD); // 设置显示偏移 Shift Mapping RAM Counter (0x00~0x3F)
    OLED_WR_Byte(0x00, OLED_CMD); // 无偏移
    OLED_WR_Byte(0xd5, OLED_CMD); // 设置显示时钟分频比/振荡器频率
    OLED_WR_Byte(0x80, OLED_CMD); // 设置分频比，设置时钟为100帧/秒
    OLED_WR_Byte(0xD9, OLED_CMD); // 设置预充电周期
    OLED_WR_Byte(0xF1, OLED_CMD); // 设置预充电为15个时钟，放电为1个时钟
    OLED_WR_Byte(0xDA, OLED_CMD); // 设置COM引脚硬件配置
    OLED_WR_Byte(0x12, OLED_CMD);
    OLED_WR_Byte(0xDB, OLED_CMD); // 设置VCOMH
    OLED_WR_Byte(0x40, OLED_CMD); // 设置VCOM解选电平
    OLED_WR_Byte(0x20, OLED_CMD); // 设置页面寻址模式 (0x00/0x01/0x02)
    OLED_WR_Byte(0x02, OLED_CMD);
    OLED_WR_Byte(0x8D, OLED_CMD); // 设置电荷泵使能/禁用
    OLED_WR_Byte(0x14, OLED_CMD); // 启用(0x10禁用)
    OLED_WR_Byte(0xA4, OLED_CMD); // 禁用整个显示开启 (0xa4/0xa5)
    OLED_WR_Byte(0xA6, OLED_CMD); // 禁用反相显示开启 (0xa6/a7)
    OLED_WR_Byte(0xAF, OLED_CMD); // 开启OLED面板

    OLED_WR_Byte(0xAF, OLED_CMD); /*显示开启*/
    OLED_Clear();
    OLED_Set_Pos(0, 0);
}
